# text-extractor

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  text_extractor.py
